fix: olho da senha sobreposto ao campo (width 100% no wrap)
Made-with: Cursor

--- a/apps/web/src/App.css
+++ b/apps/web/src/App.css
@@ -2572,6 +2572,8 @@
 .register-input-wrap .register-input,
 .register-input-wrap .login-input {
   padding-right: 3rem;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .register-toggle-pw {
